stat, cashe, anal